--- a/LeasingCompanyMS/View/LoginView.xaml
+++ b/LeasingCompanyMS/View/LoginView.xaml
@@ -41,16 +41,15 @@
 
             <Border.BorderBrush>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="#462ad8" Offset="0"/>
-                    <GradientStop Color="#da34ae" Offset="0.75"/>
-                    <GradientStop Color="#8a16c1" Offset="1"/>
+                    <GradientStop Color="#0E79B2" Offset="0"/>
+                    <GradientStop Color="#386C0B" Offset="0.5"/>
                 </LinearGradientBrush>
             </Border.BorderBrush>
 
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
-                    <GradientStop Color="#060531" Offset="0"/>
-                    <GradientStop Color="#1b1448" Offset="0.75"/>
+                    <GradientStop Color="#213A0B" Offset="0"/>
+                    <GradientStop Color="#1C1C1C" Offset="0.55"/>
                 </LinearGradientBrush>
             </Border.Background>
 
@@ -69,7 +68,7 @@
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Text="LOG IN"
-                               Foreground="DarkGray"
+                               Foreground="White"
                                FontSize="14"
                                FontFamily="Motserrat"
                                Grid.Column="0"
@@ -81,23 +80,24 @@
                             Content="-"
                             Foreground="White"
                             FontSize="16"
+                            FontWeight="Medium"
                             FontFamily="Monserrat"
                             Cursor="Hand"
                             Grid.Column="1"
                             Click="btnMinimize_Click">
                         <Button.Style>
                             <Style TargetType="Button">
-                                <Setter Property="Background" Value="#28aeed"/>
+                                <Setter Property="Background" Value="#509A10"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#278bef"/>
+                                        <Setter Property="Background" Value="#386C0B"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
                         </Button.Style>
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
-                                <Border Width="18" Height="18"
+                                <Border Width="20" Height="20"
                                         CornerRadius="9"
                                         Background="{TemplateBinding Background}">
                                     <ContentPresenter HorizontalAlignment="Center" 
@@ -112,27 +112,28 @@
                             Content="X"
                             Foreground="White"
                             FontSize="12"
+                            FontWeight="Medium"
                             FontFamily="Monserrat"
                             Cursor="Hand"
                             Grid.Column="2"
                             Click="btnClose_Click">
                         <Button.Style>
                             <Style TargetType="Button">
-                                <Setter Property="Background" Value="#da34ae"/>
+                                <Setter Property="Background" Value="#EF7B45"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#c62dae"/>
+                                        <Setter Property="Background" Value="#FA5B11"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
                         </Button.Style>
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
-                                <Border Width="18" Height="18"
-                    CornerRadius="9"
-                    Background="{TemplateBinding Background}">
+                                <Border Width="20" Height="20"
+                                        CornerRadius="9"
+                                        Background="{TemplateBinding Background}">
                                     <ContentPresenter HorizontalAlignment="Center" 
-                                  VerticalAlignment="Center"/>
+                                                      VerticalAlignment="Center"/>
                                 </Border>
                             </ControlTemplate>
                         </Button.Template>
@@ -157,12 +158,14 @@
                                TextWrapping="Wrap"
                                TextAlignment="Center"
                                Margin="0,5,0,0"/>
+                    
                     <TextBlock Text="Username"
                                Foreground="DarkGray"
                                FontSize="16"
                                FontWeight="Medium"
                                FontFamily="Montserrat"                             
                                Margin="0,35,0,0"/>
+
                     <TextBox x:Name="txtUser"
                              Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                              FontSize="14"
@@ -196,7 +199,7 @@
                     </customcontrols:CustomPasswordBox>
 
                     <TextBlock Text="{Binding ErrorMessage}"
-                               Foreground="Red"
+                               Foreground="#FA5B11"
                                FontSize="16"
                                FontWeight="Medium"
                                FontFamily="Montserrat"                             
@@ -209,15 +212,16 @@
                             Content="LOG IN"
                             Foreground="White"
                             FontSize="12"
+                            FontWeight="Medium"
                             FontFamily="Montserrat"
                             Cursor="Hand"                           
                             Margin="0,30,0,0">
                         <Button.Style>
                             <Style TargetType="Button">
-                                <Setter Property="Background" Value="#462AD8"/>
+                                <Setter Property="Background" Value="#509A10"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#28AEED"/>
+                                        <Setter Property="Background" Value="#386C0B"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
