--- a/LeasingCompanyMS/App.xaml
+++ b/LeasingCompanyMS/App.xaml
@@ -4,6 +4,13 @@
              xmlns:local="clr-namespace:LeasingCompanyMS"
              Startup="Application_Startup">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="CustomStyles/Colors.xaml"/>
+                <ResourceDictionary Source="CustomStyles/Buttons.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
