--- a/LeasingCompanyMS/View/UserView.xaml
+++ b/LeasingCompanyMS/View/UserView.xaml
@@ -54,16 +54,19 @@
                     </StackPanel>
 
                     <RadioButton Style="{StaticResource menuButton}"
-                             Tag="{StaticResource borderColor2}">
+                             Tag="{StaticResource borderColor2}"
+                             Click="openManageCars">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Manage Cars"
                                        Margin="15,0,0,0"
                                        Style="{StaticResource menuButtonText}"/>
                         </StackPanel>
+
                     </RadioButton>
 
                     <RadioButton Style="{StaticResource menuButton}"
-                             Tag="{StaticResource borderColor2}">
+                             Tag="{StaticResource borderColor2}"
+                             Click="openManagePayments">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Manage Payments" 
                                        Margin="15,0,0,0"
@@ -128,6 +131,8 @@
                         </Button>
 
                     </StackPanel>
+                    <Frame Grid.Row="2" Opacity="0.3" Name="frame">
+                    </Frame>
                 </Grid>
 
             </Border>
