--- a/LeasingCompanyMS/Pages/ManagePaymentsPage.xaml
+++ b/LeasingCompanyMS/Pages/ManagePaymentsPage.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:LeasingCompanyMS.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ManagePaymentsPage">
+      Title="ManagePaymentsPage"
+      ShowsNavigationUI="False">
 
     <Grid>
         
