--- a/LeasingCompanyMS/Pages/LeasingInformationPage.xaml
+++ b/LeasingCompanyMS/Pages/LeasingInformationPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LeasingCompanyMS.Pages.ManageCarsPage"
+﻿<Page x:Class="LeasingCompanyMS.Pages.LeasingInformationPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,10 @@
       xmlns:local="clr-namespace:LeasingCompanyMS.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ManageCarsPage"
-      ShowsNavigationUI="False">
-    <DataGrid d:ItemsSource="{Binding Source=cars}" Margin="100,0,100,0" Height="398" VerticalAlignment="Center" Name="carsDataGrid"/>
+      Title="LeasingInformationPage"
+        ShowsNavigationUI="False">
+
+    <Grid>
+        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Name="leasingsDataGrid"/>
+    </Grid>
 </Page>
